--- a/themes/fronthub/assets/scss/fronthub/_base.scss
+++ b/themes/fronthub/assets/scss/fronthub/_base.scss
@@ -65,3 +65,16 @@ img {
 td {
   vertical-align: top;
 }
+
+$logo-colors: $bg,
+$fg,
+$error,
+$error-alt,
+$success,
+$success-alt,
+$warning,
+$warning-alt,
+$info,
+$active,
+$string,
+$purple;
