--- a/themes/fronthub/assets/scss/fronthub/_variables.scss
+++ b/themes/fronthub/assets/scss/fronthub/_variables.scss
@@ -7,6 +7,7 @@ $shadow-color: rgba(0, 0, 0, .2);
 
 $bg: #282A36;
 $fg: #F8F8F2;
+$black: #121212;
 $error: #FF5555;
 $error-alt: #FF6E6E;
 $success: #50FA7B;
