--- a/themes/fronthub/assets/scss/fronthub/_layout.scss
+++ b/themes/fronthub/assets/scss/fronthub/_layout.scss
@@ -14,6 +14,7 @@ footer,
 }
 
 .nav {
+  background: $black;
   box-shadow: 0 2px 2px -2px $shadow-color;
   overflow: auto;
 
@@ -25,8 +26,8 @@ footer,
 
   &-title {
     @include transition(all .2s ease-out);
-    color: $bg;
     display: inline-block;
+    font-family: $serif-primary;
     margin: 0;
     padding-right: .2rem;
 
