--- a/themes/fronthub/layouts/index.html
+++ b/themes/fronthub/layouts/index.html
@@ -1,24 +1,23 @@
 {{ define "main" }}
 
 <main>
-	{{ partial "index/introduction.html" . }}
-
 	<div class="catalogue">
 		{{ range (.Paginate .Pages).Pages }}
-			{{ .Render "summary" }}
+		{{ .Render "summary" }}
 		{{ end }}
 	</div>
-	
+
 	<div class="pagination">
 		{{ if .Paginator.HasPrev }}
-			<a href="{{ .Paginator.Prev.URL }}" class="left arrow">&#8592;</a>
+		<a href="{{ .Paginator.Prev.URL }}" class="left arrow">&#8592;</a>
 		{{ end }}
 		{{ if .Paginator.HasNext }}
-			<a href="{{ .Paginator.Next.URL }}" class="right arrow">&#8594;</a>
+		<a href="{{ .Paginator.Next.URL }}" class="right arrow">&#8594;</a>
 		{{ end }}
-	
+
 		<span>{{ .Paginator.PageNumber }}</span>
 	</div>
 </main>
+<script src="{{ .Site.BaseURL }}js/randomColors.js"></script>
 
 {{ end }}
