--- a/themes/fronthub/assets/scss/fronthub/_base.scss
+++ b/themes/fronthub/assets/scss/fronthub/_base.scss
@@ -58,8 +58,8 @@ blockquote {
 
 img {
   display: block;
-  margin: 0 0 1rem;
-  max-width: 100%;
+  margin: 0 auto;
+  max-width: 300px;
 }
 
 td {
