--- a/themes/fronthub/layouts/index.html
+++ b/themes/fronthub/layouts/index.html
@@ -18,6 +18,6 @@
 		<span>{{ .Paginator.PageNumber }}</span>
 	</div>
 </main>
-<script src="{{ .Site.BaseURL }}js/randomColors.js"></script>
+<script src="{{ relURL "js/randomColors.js" }}"></script>
 
 {{ end }}
