--- a/themes/zen/assets/sass/init/_variables.scss
+++ b/themes/zen/assets/sass/init/_variables.scss
@@ -90,7 +90,7 @@ $typefaces: (
     font-family: $fira-code,
   ),
   headings: (
-    font-family: $futura,
+    font-family: $fira-code,
   ),
   monospace: (
     font-family: $menlo,
