--- a/themes/zen/assets/sass/_zen.scss
+++ b/themes/zen/assets/sass/_zen.scss
@@ -68,7 +68,12 @@ article > header,
 .footer {
   @include typeface(headings);
   color: $headings;
-  font-weight: normal;
+  font-weight: 700;
+}
+
+p {
+  color: $text;
+  font-size: 14px;
 }
 
 article > .content,
@@ -118,6 +123,7 @@ article {
 
     a {
       @include padding-right(.2);
+      text-decoration: none;
     }
   }
 
@@ -220,7 +226,7 @@ figure {
 // Navigation
 
 .main-menu {
-  @include margin-top(.5);
+  
   outline: 0;
 
   li {
@@ -244,7 +250,6 @@ figure {
     &:active,
     &.active {
       background-color: $brand;
-      text-decoration: underline;
     }
   }
 }
