--- a/themes/zen/assets/sass/components/header/_header.scss
+++ b/themes/zen/assets/sass/components/header/_header.scss
@@ -2,6 +2,7 @@
 
 .header,
 %header {
+  align-items: center;
   @include respond-to(s) {
     display: flex;
   }
@@ -37,7 +38,7 @@
 
     &:hover,
     &:focus {
-      text-decoration: underline;
+      text-decoration: none;
     }
   }
 
