--- a/themes/zen/assets/sass/init/_colors.scss
+++ b/themes/zen/assets/sass/init/_colors.scss
@@ -1,33 +1,35 @@
 // sass-lint:disable no-color-keywords; no-color-hex
 
 // Base colors.
-$black:                  #000;
-$nearblack:              lighten($black, 20%); // #333
+$black:                  #282a36;
+$nearblack:              #44475a; // #333
 $grey-dark:              lighten($black, 40%); // #666
 $grey:                   lighten($black, 60%); // #999
 $grey-light:             lighten($black, 80%); // #ccc
 $grey-extra-light:       lighten($black, 93.33%); // #eee
-$white:                  #fff;
+$white:                  #f8f8f2;
 
-$purple:                #38006b;
-
-$blue:                   #0072b9;
-$red:                    #c00;
-$green:                  #43a808;
-$yellow:                 #fd0;
+$purple:                 #bd93f9;
+$pink:                   #ff79c6;
+$blue:                   #6272a4; 
+$cyan:                   #8be9fd;
+$red:                    #ff5555;
+$green:                  #50fa7b;
+$yellow:                 #f1fa8c;
+$orange:                 #ffb86c;
 
 // Colors used in the main content area.
-$brand:                  $purple;
+$brand:                  $yellow;
 $brand-alt:              $grey;
 $brand-dark:             $grey-dark;
-$text:                   $black;
-$text-bg:                $white;
+$text:                   $white;
+$text-bg:                $black;
 $text-meta:              $grey-dark;
 
-$link:                   $black;
-$link-visited:           $black;
+$link:                   $cyan;
+$link-visited:           $orange;
 $link-hover:             $brand;
-$link-active:            $red;
+$link-active:            $purple;
 
 $border:                 $grey-light;
 $border-dark:            $nearblack;
@@ -37,9 +39,9 @@ $autocomplete-bg:        $text-bg;
 $autocomplete-select:    $white;
 $autocomplete-select-bg: $blue;
 
-$body-bg:                $white;
+$body-bg:                $nearblack;
 $header-bg:              $brand;
-$backdrop:               $white;
+$backdrop:               $black;
 
 $mobile-menu:            $header-bg;
 $mobile-menu-cover:      rgba($black, .2);
@@ -70,6 +72,6 @@ $error-bg:               lighten($error, 57%);
 
 $watermark:              $grey-extra-light;
 
-$headings:               $nearblack;
+$headings:               $red;
 
-$code:                   $nearblack;
+$code:                   $yellow;
