--- a/themes/zen/assets/sass/navigation/navbar/_navbar.scss
+++ b/themes/zen/assets/sass/navigation/navbar/_navbar.scss
@@ -5,10 +5,10 @@
 .navbar,
 %navbar {
   display: flex;
-  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   text-align: left;
+  align-items: center;
 
   @include rtl() {
     flex-direction: row-reverse;
