--- a/themes/zen/layouts/_default/baseof.html
+++ b/themes/zen/layouts/_default/baseof.html
@@ -13,19 +13,20 @@
 </head>
 
 <body>
+  <header class="header layout__header">
+    {{ if $.Param "logo" | default false }}<a href="{{ "/" | relLangURL }}" title="Home" rel="home" class="header__logo"><img src="{{ "/images/logo.png" | relURL }}" alt="Home" class="header__logo-image"></a>{{ end }}
+    <h1 class="header__site-name">
+      <a href="{{ "/" | relLangURL }}" title="Home" class="header__site-link" rel="home"><span>{{ .Site.Title }}</span></a>
+    </h1>
+    {{ partial "menu.html" . }}
+    {{ if .Site.IsMultiLingual }}  
+    <div class="region header__region">
+      {{ partial "language-selector.html" . }}
+      {{ if $.Param "search" }}{{ partialCached "search.html" . }}{{ end -}}
+    </div>
+    {{ end -}}
+  </header>
 <div class="page layout__page{{ if $.Param "sidebar" | default true }} layout__sidebar-second{{ end }}">
-<header class="header layout__header">
-  {{ if $.Param "logo" | default false }}<a href="{{ "/" | relLangURL }}" title="Home" rel="home" class="header__logo"><img src="{{ "/images/logo.png" | relURL }}" alt="Home" class="header__logo-image"></a>{{ end }}
-  <h1 class="header__site-name">
-    <a href="{{ "/" | relLangURL }}" title="Home" class="header__site-link" rel="home"><span>{{ .Site.Title }}</span></a>
-  </h1>
-  {{ partial "menu.html" . }}
-  
-<div class="region header__region">
-{{ if .Site.IsMultiLingual }}{{ partial "language-selector.html" . }}{{ end -}}
-{{ if $.Param "search" }}{{ partialCached "search.html" . }}{{ end -}}
-</div>
-</header>
 
 
 
