--- a/themes/zen/layouts/partials/sidebar.html
+++ b/themes/zen/layouts/partials/sidebar.html
@@ -2,14 +2,14 @@
 {{ $currentID := "" -}}
 {{ with .File }}{{ $currentID = .UniqueID }}{{ end -}}
 <aside class="sidebar layout__second-sidebar">
-{{ range .Site.Sections -}}
-<section>
-<h4 class="menu"><a class="{{ if eq $currentSection .Section }}active{{ end }}" href="{{ .RelPermalink }}">{{ .Title }}</a></h4>
-<ul class="menu">
-{{ range .Pages -}}
-<li><a class="{{ if eq $currentID .File.UniqueID }}active{{ end }}" href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-{{ end -}}
-</ul>
-</section>
-{{ end -}}
+  {{ range .Site.Sections -}}
+  <section>
+    <h2 class="title">{{ .Title }}</h2>
+    <ul class="menu">
+    {{ range .Pages -}}
+    <li><a class="{{ if eq $currentID .File.UniqueID }}active{{ end }}" href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+    {{ end -}}
+    </ul>
+  </section>
+  {{ end -}}
 </aside>
