--- a/themes/zen/layouts/_default/baseof.html
+++ b/themes/zen/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
 {{ partial "scripts.html" . }}
 {{ partialCached "matomo.html" . }}
 </head>
-
+{{ $social := .Site.Data.social }}
 <body>
   <header class="header layout__header">
     {{ if $.Param "logo" | default false }}<a href="{{ "/" | relLangURL }}" title="Home" rel="home" class="header__logo"><img src="{{ "/images/logo.png" | relURL }}" alt="Home" class="header__logo-image"></a>{{ end }}
@@ -34,14 +34,21 @@
 
 {{ if $.Param "sidebar" | default true }}{{ partial "sidebar.html" . }}{{ end -}}
 
-<footer class="footer layout__footer">
-{{ if $.Param "feedlinks" }}{{ partial "feedlinks.html" . }}{{ end -}}
-<p>{{ with $.Param "copyright" }}{{ . | markdownify }}{{ else }}<span>© {{ .Site.Title }}</span>{{ end }}</p>
-{{ with $.Param "footer" }}<p>{{ . | markdownify }}</p>{{ end }}
-{{ if $.Param "poweredby" }}<p>Powered by <a href="https://gohugo.io/">Hugo</a> and the <a href="https://github.com/frjo/hugo-theme-zen">Zen theme</a>.</p>{{ end }}
-</footer>
 
 </div>
+  <footer class="footer layout__footer">
+  {{ if $.Param "feedlinks" }}{{ partial "feedlinks.html" . }}{{ end -}}
+  <p>{{ with $.Param "copyright" }}{{ . | markdownify }}{{ else }}<span>© {{ .Site.Title }}</span>{{ end }}</p>
+  <div class="flex-center">
+      {{ range $key, $value := $social }}
+      <a target="_blank" href="{{ $value }}" rel="me">
+        <i class="fa fa-{{ $key }} fa-2x icon-3d"></i>
+      </a>
+    {{ end }}
+  </div>
+  {{ with $.Param "footer" }}<p>{{ . | markdownify }}</p>{{ end }}
+  {{ if $.Param "poweredby" }}<p>Powered by <a href="https://gohugo.io/">Hugo</a>.</p>{{ end }}
+  </footer>
 {{ if $.Param "mobilemenu" }}{{ partial "mobilemenu.html" . }}{{ end -}}
 </body>
 </html>
