--- a/themes/zen/layouts/partials/styles.html
+++ b/themes/zen/layouts/partials/styles.html
@@ -17,3 +17,4 @@
 {{ end -}}
 <link rel="stylesheet" href="{{ $main_style.RelPermalink }}">
 <link rel="stylesheet" href="{{ $print_style.RelPermalink }}" media="print">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
