[ADD] Summary Style

--- a/themes/zen/assets/sass/init/_variables.scss
+++ b/themes/zen/assets/sass/init/_variables.scss
@@ -152,3 +152,5 @@ $zen-gutters: 20px;
 $indent-amount: 2 * $base-font-size;
 
 $include-rtl: false;
+$highlight: #5bc0eb;
+$darkhighlight: #fde74c;
