--- a/themes/zen/assets/sass/_zen.scss
+++ b/themes/zen/assets/sass/_zen.scss
@@ -44,14 +44,70 @@ figcaption {
   }
 }
 
-.list-view {
-  &:after {
-    content: '<!--  -->';
-    text-align: center;
-    margin: 0 auto;
+.single-view {
+  margin: 10px auto;
+  position: relative;
+  
+  .card-content {
+    padding: 30px;
+    width: 100%;
+    height: 400px;
+    border: 2px solid $black;
+    text-decoration: none;
+    background: $black;
     display: block;
-    color: $green;
+    transition: 0.25s ease;
+    z-index: 2;
+    position: relative;
+    
+    &:hover {
+      transform: translate(30px, -30px);
+      border-color: $orange;
+      
+      .card--display {
+        display: none;
+      }
+      
+      .card--hover {
+        display: block;
+      }
+    }
+    
+    .card--display {
+      i {
+        font-size: 60px;
+        margin-top: 200px;
+      }
+    }
+    
+    .card--hover {
+      display: none;
+      
+      
+      p {
+        font-weight: normal;
+        line-height: 1.5;
+        
+        &.link {
+          margin: 20px 0 0;
+          font-weight: bold;
+          color: $highlight;
+        }
+      }
+    }
   }
+  
+  .card--border {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    border: 2px dashed $orange;
+    z-index: 1;
+  }
+  
+
 }
 
 .language-selector,
