--- a/themes/zen/assets/sass/_zen.scss
+++ b/themes/zen/assets/sass/_zen.scss
@@ -73,6 +73,12 @@ figcaption {
       }
     }
     
+    .content {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: flex-end;
+    }
     .card--display {
       i {
         font-size: 60px;
@@ -81,8 +87,7 @@ figcaption {
     }
     
     .card--hover {
-      display: none;
-      
+      display: none;    
       
       p {
         font-weight: normal;
@@ -106,8 +111,6 @@ figcaption {
     border: 2px dashed $orange;
     z-index: 1;
   }
-  
-
 }
 
 .language-selector,
