--- a/themes/zen/layouts/_default/summary.html
+++ b/themes/zen/layouts/_default/summary.html
@@ -2,7 +2,14 @@
     <div class="card-content">
       <div class="content card--display">
         <div class="wrapper">
-          <i class="material-icons">ícone aqui</i>
+            <i class="fa fa-code fa-2x"></i>
+          <p>
+            <time
+              class="modified-date"
+              datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
+                {{ .Lastmod.Format ($.Param "dateformat" | default "2 January, 2006") }}
+            </time>
+          </p>
           <h2 class="title {{ if $.Param "submitted" | default false }}title-submitted{{ end }}">{{ .Title }}</h2>
         </div>
       </div>
@@ -10,7 +17,6 @@
       <div class="content card--hover">
         <div class="wrapper">
           <h2 class="title {{ if $.Param "submitted" | default false }}title-submitted{{ end }}">{{ .Title }}</h2>
-          <time class="modified-date" datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Lastmod.Format ($.Param "dateformat" | default "2 January, 2006") }}</time>
           <p>{{ .Summary }}</p>
           <a href="{{ .RelPermalink }}" class="link">Veja na íntegra</a>
         </div>
