[FIX] Auto height post

--- a/themes/zen/assets/sass/base/embedded/_embedded.scss
+++ b/themes/zen/assets/sass/base/embedded/_embedded.scss
@@ -29,3 +29,20 @@ svg {
 video {
   // Add your styles.
 }
+
+.profile {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  overflow: hidden;
+  margin: 0 auto;
+  position: relative;
+
+  .photo {
+    position: absolute;
+    top: -60px;
+  }
+
+}
+
+
