--- a/themes/zen/assets/sass/_zen.scss
+++ b/themes/zen/assets/sass/_zen.scss
@@ -47,74 +47,93 @@ figcaption {
 .single-view {
   margin: 10px auto;
   position: relative;
-  
+
   .card-content {
-    padding: 30px;
-    width: 100%;
-    height: 400px;
-    border: 2px solid $black;
-    text-decoration: none;
     background: $black;
+    border: 2px solid $black;
     display: block;
-    transition: 0.25s ease;
-    z-index: 2;
+    padding: 30px;
     position: relative;
-    
+    text-decoration: none;
+    transition: 0.25s ease;
+    width: 100%;
+    z-index: 2;
+
     &:hover {
-      transform: translate(30px, -30px);
+      transform: translate(15px, -15px);
       border-color: $orange;
-      
+
       .card--display {
         display: none;
       }
-      
+
       .card--hover {
         display: block;
       }
     }
-    
+
     .content {
-      width: 100%;
-      height: 100%;
-      display: flex;
       align-items: flex-end;
+      display: flex;
+      height: 100%;
+      width: 100%;
+
+      .wrapper {
+        display: flex;
+        flex-direction: column;
+      }
     }
+
     .card--display {
       i {
         font-size: 60px;
-        margin-top: 200px;
       }
     }
-    
+
     .card--hover {
-      display: none;    
-      
+      display: none;
+
       p {
         font-weight: normal;
         line-height: 1.5;
-        
-        &.link {
-          margin: 20px 0 0;
+      }
+
+      .wrapper {
+        .link {
+          border-radius: 3px;
+          border: 1.5px solid $cyan;
+          color: $cyan;
           font-weight: bold;
-          color: $highlight;
+          margin: 20px 0 0;
+          opacity: .55;
+          padding: 8px 15px;
+          text-align: center;
+          text-decoration: none;
+          text-transform: uppercase;
+          transition: .2s all ease-in-out;
+
+          &:hover {
+            opacity: 1;
+          }
         }
       }
+
     }
   }
-  
+
   .card--border {
-    position: absolute;
-    width: 100%;
+    border: 2px dashed $orange;
     height: 100%;
     left: 0;
+    position: absolute;
     top: 0;
-    border: 2px dashed $orange;
+    width: 100%;
     z-index: 1;
   }
 }
 
 .language-selector,
-article > header,
+article>header,
 .content-dates,
 .footer {
   @include type-layout(xs, 1);
@@ -133,7 +152,7 @@ th,
 nav,
 label,
 legend,
-article > header,
+article>header,
 .content-dates,
 .header,
 .footer {
@@ -147,7 +166,7 @@ p {
   font-size: 14px;
 }
 
-article > .content,
+article>.content,
 aside {
   ul {
     display: block;
@@ -168,7 +187,7 @@ aside {
 
 article {
 
-  & > header {
+  &>header {
     color: $text-meta;
 
     p {
@@ -235,7 +254,7 @@ article {
       overflow-x: scroll;
     }
 
-    & > code {
+    &>code {
       display: inline-block;
       white-space: pre;
     }
@@ -327,9 +346,11 @@ figure {
     &.active {
       color: $orange;
       text-decoration: line-through;
+
       &:before {
         content: '{ ';
       }
+
       &:after {
         content: ' }';
       }
@@ -339,6 +360,11 @@ figure {
 
 .sidebar {
   padding: 20px 0;
+
+  @media only screen and (max-width:767px) {
+    display: none;
+  }
+
   .title {
     color: $cyan;
     @include type-layout(l, 1.2);
@@ -374,6 +400,7 @@ figure {
 // Form
 
 .content {
+
   input,
   textarea {
     @include margin-bottom(.75);
@@ -396,6 +423,7 @@ figure {
 }
 
 .js-submitted {
+
   input,
   textarea {
     &:valid {
